try to fix jumping

--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -632,6 +632,9 @@
     .about-info h2 {
       max-width: 70%;
     }
+    .hero {
+      padding-top: 2em;
+    }
   }
 
   @media screen and (min-width: 991px) {
@@ -645,7 +648,7 @@
   @media screen and (max-width: 991px) {
 
     .hero {
-      padding-top: 14em;
+      padding-top: 4em;
     }
 
     .hero-text {
